--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ani-react",
   "version": "1.1.2",
   "description": "react animation library",
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "peerDependencies": {
     "react": "^16.8.0"
   },
